Added add media modal
