# packages/backend/src/medias/movies/dto/movie.tv.dto.ts
@@ -1,4 +1,4 @@
-import { IsNotEmpty, IsNumber } from 'class-validator';
+import {IsNotEmpty, IsNumber, IsString} from 'class-validator';
 import { ApiProperty } from '@nestjs/swagger';
 
 export class MovieTvDto {
@@ -9,4 +9,12 @@ export class MovieTvDto {
     example: 13493,
   })
   tmdbId: number;
+
+  @IsString()
+  @IsNotEmpty()
+  @ApiProperty({
+    description: 'filePath of the movie',
+    example: '/media/13493.mp4',
+  })
+  filePath: string;
 }
