# packages/backend/src/tmdb/tmdb.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Param } from '@nestjs/common';
+import {Controller, Get, Param, Query} from '@nestjs/common';
 import { TmdbService } from './tmdb.service';
 import { Roles } from '../shared/decorators/roles.decorator';
 import { Role } from '../shared/role';
@@ -10,9 +10,9 @@ export class TmdbController {
   constructor(private readonly tmdbService: TmdbService) {}
 
   @Roles(Role.Admin)
-  @Get('search/:query')
+  @Get('search')
   @ApiOperation({ summary: '[Admin] Search in TMDB API for movies & tvs' })
-  async searchQuerry(@Param('query') query: string): Promise<any[]> {
+  async searchQuerry(@Query('query') query: string) {
     return this.tmdbService.searchQuery(query);
   }
 }
